feat: support checking *.mbt.md when running moon check

--- a/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
+++ b/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
@@ -17,6 +17,7 @@ println(@lib.hello1())
 
     ```mbt
     test {
+        let a = 1
         println(@lib.hello2())
         inspect!("4234")
     }
