internal: merge bbtest & md test for moon test

--- a/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
+++ b/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
@@ -1,6 +1,13 @@
 
 
 # 1
+
+```mbt
+fn fn_in_md_test() -> Unit {
+    println("fn in md test")
+}
+```
+
 ```mbt
 test {
     println(@lib.hello1())
