--- a/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
+++ b/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
@@ -27,7 +27,18 @@ test {
 - 1.1.2 
 
 ```mbt
+
+
 test {
+    let input =
+        #|```moonbit
+        #|fn main {
+        #|  println("Hello")
+        #|}
+        #|```
+
+    println(input)
+    
     let a = 1
     println(@lib.hello2())
     inspect!("4234")
@@ -38,7 +49,7 @@ test {
 
 - 1.2.1
 
-```moonbit
+````moonbit
 test {
     let a = #| all
             #| wishes
@@ -49,5 +60,5 @@ test {
 
     inspect!(a)
 }
-```
+````
 
