feat: support moon check single .mbt.md

--- a/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
+++ b/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
@@ -1,7 +1,7 @@
 # 1
 
 ```moonbit
-fn main {
+fn _hello() -> Unit {
   println("------------------ in main ------------------")
 }
 ```
@@ -15,6 +15,7 @@ test {
 
 ```moonbit
 test {
+    let single_mbt_md = 1
     inspect!(234523)
     println("222")
 }
