feat: support deps for .mbt.md

--- a/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
+++ b/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
@@ -1,3 +1,11 @@
+---
+moonbit:
+  deps:
+    moonbitlang/x: 0.4.23
+  backend:
+    js
+---
+
 # 1
 
 ```moonbit
@@ -16,6 +24,11 @@ test {
 ```moonbit
 test {
     let single_mbt_md = 1
+    let path = "1.txt"
+    let content = "Hello, MoonBit"
+    @fs.write_string_to_file!(path, content)
+    let res = @fs.read_file_to_string!(path)
+    inspect!(res, content=content)
     inspect!(234523)
     println("222")
 }
