internal: support local deps for .mbt.md

--- a/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
+++ b/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
@@ -2,6 +2,8 @@
 moonbit:
   deps:
     moonbitlang/x: 0.4.23
+    # moonbitlang/x:
+    #   path: "/Users/flash/projects/x"
   backend:
     js
 ---
