minor: f!() -> f() in test file

--- a/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
+++ b/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
@@ -41,7 +41,7 @@ test {
     
     let a = 1
     println(@lib.hello2())
-    inspect!("4234")
+    inspect("4234")
 }
 ```  
 
@@ -58,7 +58,7 @@ test {
             #| true
             #|
 
-    inspect!(a)
+    inspect(a)
 }
 ````
 
