--- a/crates/moon/tests/test_cases/run_md_test.in/src/lib/2.mbt.md
+++ b/crates/moon/tests/test_cases/run_md_test.in/src/lib/2.mbt.md
@@ -3,6 +3,6 @@
 ```mbt
 test {
     println(test_hello())
-    assert_eq!(@lib.hello3(), "Hello, world 3!")
+    assert_eq(@lib.hello3(), "Hello, world 3!")
 }
 ``` 
