--- a/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
+++ b/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
@@ -28,10 +28,10 @@ test {
     let single_mbt_md = 1
     let path = "1.txt"
     let content = "Hello, MoonBit"
-    @fs.write_string_to_file!(path, content)
-    let res = @fs.read_file_to_string!(path)
-    inspect!(res, content=content)
-    inspect!(234523)
+    @fs.write_string_to_file(path, content)
+    let res = @fs.read_file_to_string(path)
+    inspect(res, content=content)
+    inspect(234523)
     println("222")
 }
 ```
