fix: adapt doctest format

--- a/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
+++ b/crates/moon/tests/test_cases/moon_test_single_file.in/111.mbt.md
@@ -16,15 +16,15 @@ fn _hello() -> Unit {
 }
 ```
 
-```moonbit
-test {
+```mbt test
+
     println("111")
-}
+
 ```
 
 
-```moonbit
-test {
+
+```mbt test
     let single_mbt_md = 1
     let path = "1.txt"
     let content = "Hello, MoonBit"
@@ -33,5 +33,4 @@ test {
     inspect(res, content=content)
     inspect(234523)
     println("222")
-}
 ```
