--- a/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
+++ b/crates/moon/tests/test_cases/run_md_test.in/src/lib/1.mbt.md
@@ -2,34 +2,31 @@
 
 # 1
 
-```mbt
-fn fn_in_md_test() -> Unit {
-    println("fn in md test")
-}
-```
 
-```mbt
-test {
+
+
+```mbt test
+
     println(@lib.hello1())
-}
+
 ``` 
 
 ## 1.1
 
 - 1.1.1 
 
-```mbt
-test {
+```mbt test
+
     println(@lib.hello3())
-}
+
 ```   
 
 - 1.1.2 
 
-```mbt
+```mbt test
 
 
-test {
+
     let input =
         #|```moonbit
         #|fn main {
@@ -42,15 +39,15 @@ test {
     let a = 1
     println(@lib.hello2())
     inspect("4234")
-}
+
 ```  
 
 ## 1.2
 
 - 1.2.1
 
-````moonbit
-test {
+````mbt test
+
     let a = #| all
             #| wishes
             #|
@@ -59,6 +56,6 @@ test {
             #|
 
     inspect(a)
-}
+
 ````
 
